log

Wed 13 Mar 2024 08:34:41 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
53efca1
Wed 13 Mar 2024 08:48:17 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
8fb736a
Wed 13 Mar 2024 08:50:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
03bd431
Wed 13 Mar 2024 08:51:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
05d5c2a
Wed 13 Mar 2024 08:51:58 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
d7d20d9
Wed 13 Mar 2024 08:52:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
547ef87
Wed 13 Mar 2024 08:54:27 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1d204a9
Wed 13 Mar 2024 09:06:30 PM UTC: 
 exercises.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
 tests:  0|6
total_score: 10/70
7c1b161
Wed 13 Mar 2024 09:08:57 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
93cae68
Wed 13 Mar 2024 09:09:27 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
a60b44e
Wed 13 Mar 2024 09:09:50 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
517cdcc
Wed 13 Mar 2024 09:13:46 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: array size missing in ‘arr2’
   31 |   int arr2[];
      |       ^~~~
Compilation failed
2829f60
Wed 13 Mar 2024 09:14:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
3ce64bd
Wed 13 Mar 2024 09:14:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
f28f9c0
Wed 13 Mar 2024 09:15:12 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: variable ‘arr2’ set but not used [-Werror=unused-but-set-variable]
   31 |   int arr2[size-1];
      |       ^~~~
cc1: all warnings being treated as errors
Compilation failed
66e2864
Wed 13 Mar 2024 09:21:49 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘arr2’ [-Werror=unused-variable]
   31 |   int arr2[size-1];
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:5: error: expected expression before ‘}’ token
   55 |     }
      |     ^
exercises.c:56:7: error: unused variable ‘newArr’ [-Werror=unused-variable]
   56 |   int newArr[cont];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
Sat 16 Mar 2024 10:55:52 PM UTC: 
 exercises.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:31:7: error: unused variable ‘arr2’ [-Werror=unused-variable]
   31 |   int arr2[size-1];
      |       ^~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:55:5: error: expected expression before ‘}’ token
   55 |     }
      |     ^
exercises.c:56:7: error: unused variable ‘newArr’ [-Werror=unused-variable]
   56 |   int newArr[cont];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
dceb6b1
Sat 16 Mar 2024 11:00:48 PM UTC: 
 exercises.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:32:13: error: ‘tamano’ undeclared (first use in this function)
   32 |   int fin = tamano - 1;
      |             ^~~~~~
exercises.c:32:13: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:37:14: error: ‘arreglo’ undeclared (first use in this function)
   37 |       temp = arreglo[i];
      |              ^~~~~~~
exercises.c:41:12: error: expected ‘;’ before ‘:’ token
   41 |       fin--:
      |            ^
      |            ;
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:59:5: error: expected expression before ‘}’ token
   59 |     }
      |     ^
exercises.c:60:7: error: unused variable ‘newArr’ [-Werror=unused-variable]
   60 |   int newArr[cont];
      |       ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
e90c2c7
